# documind

./: .env  .env.template  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: auto-deploy.yml  ci.yml  docker-build.yml
.history/: .env_20250308105241.docker  Makefile_20250308163016  Makefile_20250308181356  build_20250308171646.ninja  build_20250308181356.ninja  docker-compose.prod_20250308161005.yml  docker-compose_20250308105241.yml  docker-compose_20250308105755.yml  docker-compose_20250308220513.yml  install_20250308160356.sh  ninja-team_20250308200948.cmake  package_20250309120316.json
.history/.github/workflows/: ninja-deploy_20250308200750.yml  production-deploy_20250308161949.yml
.history/ansible/: playbook_20250308161718.yml
.history/ansible/templates/: env_20250307165427.j2  env_20250308161733.j2
.history/cmake/: CMakeLists_20250308163057.txt  deep_analysis_20250308163054.cmake
.history/docker/: Dockerfile_20250308105241  Dockerfile_20250308105903  Dockerfile_20250309075408  init_20250308102625.sh  supervisord_20250308105721.conf
.history/docker/backup/: Dockerfile_20250308102630  Dockerfile_20250308161005  backup_20250307172418.sh  backup_20250308105242.sh  backup_20250308160755.sh  entrypoint_20250307172418.sh  entrypoint_20250308102647.sh
.history/docker/db/: postgres_20250308105903.conf
.history/docker/mysql/: my_20250308160406.cnf
.history/docker/nginx/: nginx_20250307200435.conf  nginx_20250308102704.conf
.history/docker/ninja-team/: Dockerfile_20250308215840  Dockerfile_20250308220432
.history/docker/redis/: redis_20250308105903.conf
.history/scripts/: build-ninja-docker_20250308215923.sh  code-crawler_20250308181627.js  monitor-deployment_20250308195216.sh  ninja-scan_20250308200947.sh  ninja-team-orchestrator_20250308194624.sh  setup-ninja-team_20250308200948.sh  setup-ninja-team_20250308201724.sh  test-ninja-docker_20250308213434.sh  verify-deployment_20250308162030.sh
.history/scripts/ninja-team/: ninja-builder_20250308200947.sh  ninja-deployer_20250308192820.sh  ninja-monitor_20250308194624.sh
.history/scripts/windows/: Run-NinjaDocker_20250309075408.ps1
.history/src/analytics/: analyticsEngine_20250308105243.ts
.history/terraform/: main_20250308161745.tf  variables_20250308161706.tf
core/: package.json
core/src/: types.ts
deploy/manifests/: production.yaml
docker/: .env.template  Dockerfile  docker-compose.yml
docker/backup/: Dockerfile  backup-scheduler.sh  backup.sh
docker/nginx/: nginx.conf
docker/ninja-team/: docker-compose.yml  entrypoint.sh
docker/prometheus/: prometheus.yml
docs/: GCTR_Jest_Design.md  INSTALLATION.md
extractor/: package.json
extractor/src/: index.js
public/: index.html
public/css/: document-clusters.css  document-compare.css  document-editor.css  mindmap.css  mobile.css  modern-theme.css  style.css  timeline.css
public/js/: app.js  document-clusters.js  document-compare.js  mobile.js  timeline-visualization.js
scripts/: auto-deploy.sh  backup.sh  case-organizer.js  compile-ninja-team.sh  deploy-ninja-team.sh  deploy-production.sh  docker-env-setup.sh  gctr.js  generate-config.js  install.sh  lint-staged.sh  ninja-deploy.sh  production-orchestrator.sh  restore.sh  run-ninja-container.sh  setup_python_env.sh  verify-environment.sh
scripts/ninja-team/: ninja-guardian.sh  ninja-scout.sh
scripts/windows/: install.ps1
src/: index.ts  server.ts
src/ai/: briefAssistant.ts  graniteProvider.ts  localProvider.ts  processor.ts
src/api/: admin.ts  advancedSearch.ts  briefAssistant.ts  caseDashboard.ts  caseSummary.ts  clustering.ts  documentEditor.ts  documents.ts  editors.ts  folders.ts  legalResearch.ts  mindmap.ts  ocr.ts  router.ts  settings.ts  shares.ts  users.ts
src/auth/: apiAuth.ts  auth.ts
src/backup/: manager.ts
src/case/: deadlineTracker.ts  entityExtractor.ts  forensicOrganizer.ts  knowledgeBase.ts  timelineExtractor.ts
src/clustering/: documentClustering.ts
src/config/: config.ts  editors.ts
src/database/: connection.ts  schema.ts
src/game/: mechanics.ts  optimizer.ts
src/integration/: googleCalendar.ts  legalDatabases.ts
src/monitoring/: folderWatcher.ts  system.ts
src/ocr/: enhancedProcessor.ts
src/pdf/: apryse.ts  dashboard.ts
src/search/: indexer.ts  semanticSearch.ts
src/storage/: storage.ts
src/utils/: logger.ts  text.ts
src/webdav/: server.ts
systemd/: documind.service
tests/: api.test.ts  forensicOrganizer.test.ts  mechanics.test.ts  optimizer.test.ts
views/: layout.ejs
views/partials/: mobile-drawer.ejs
(+14 files in other folders)
